--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .home-container{
-  background: #07c4ff;
+  height: 80vh;
   margin-bottom: 2em;
   display: flex;
 flex-direction: column;
@@ -18,13 +18,6 @@ gap: 3em;
 }
 
 
-.home-card {
-  height: 268px;
-  border-radius: 25%;
-  border: none;
-  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-}
 
 .home-card__content {
   background: rgb(5, 6, 45);
@@ -54,65 +47,66 @@ gap: 3em;
     height: 190px;
 }
 
-.home-container-container--parrafo{
-color: var(--colorLetrasHeader);
-  font-family: var(--tipografiaGeneral);
-  text-transform: capitalize;
-  font-size: 20px;
-}
 
-.home-container-container--titulo{
-color: var(--colorLetrasHeader);
-  font-family: var(--tipografiaGeneral);
-  text-transform: uppercase;
+.home-nombre{
   font-size: 30px;
-  font-weight: 700;
-}
+   color: var(--colorGris);
+    font-family: var(--tipografiaGeneral);
+    font-weight: 700;
+      }
 
-.home-container-container2--parrafo{
-  color: var(--colorLetrasHeader);
-  font-family: var(--tipografiaGeneral);
-  font-size: 20px;
-}
+      .home-descripcion{
+  font-size: 30px;
+   color: var(--colorGris);
+    font-family: var(--tipografiaGeneral);
+    font-weight: 700;
+      }
 
-.home-container-container2--subtitulo{
-  color: var(--colorLetrasHeader);
-  font-family: var(--tipografiaGeneral);
-  font-size: 25px;
-  font-weight: 700;
-}
 
-.home-container-titulo-subtitulo{
-  display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-}
+      @media (min-width: 768px) {
+        .home-nombre{
+          font-size: 30px;
+              }
 
+              .home-descripcion{
+          font-size: 30px;
+              }
+
+      }
 
 @media (min-width: 1024px) {
+  .home-container{
+  flex-direction: row;
+  justify-content: space-around ;
+  align-items: center ;
+  }
+
+
   .home-container-card-presentacion{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    margin-left: 10em;
     gap: 10em;
   }
 
-  .home-container-container--parrafo{
+.home-container-img-perfil{
+  width: 300px;
+  height: 300px;
+}
+
+.home-img-perfil{
+width: 282px;
+height: 283px !important;
+}
+
+  .home-nombre{
 font-size: 30px;
-font-weight: 600;
     }
 
-    .home-container-container--titulo{
+    .home-descripcion{
 font-size: 30px;
-font-weight: 600;
     }
 
-    .home-container-container2--subtitulo{
-font-size: 30px;
-font-weight: 600;
-    }
+
 
 }
