--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,28 +21,28 @@
     </div>
   </div>
 </div> -->
-<div>
+<div class="home-container">
   <div
-  class="relative bg-cover bg-center bg-no-repeat my-8"
+  class="home-container-card-presentacion my-8"
 >
   <div
-    class="absolute inset-0 bg-gradient-to-r from-hero-gradient-from to-hero-gradient-to bg-cover bg-center bg-no-repeat"
+    class="max-w-sm w-full lg:max-w-full lg:flex"
   ></div>
 
   <div
-    class="container relative pb-12 sm:pt-2 sm:pb-48 lg:pt-64 lg:pb-48"
+    class="p-4 flex flex-col justify-between leading-normal"
   >
-    <div class="flex flex-col items-center justify-center lg:flex-row">
-      <div class="rounded-full border-8 border-primary shadow-xl">
+    <div class="flex flex-col items-center sm:justify-center lg:flex-row">
+      <div class="home-container-img-perfil rounded-full border-8 border-primary shadow-xl">
         <img
           src="../../assets/FotoPerfil.png"
-          class="h-48 rounded-full sm:h-56"
+          class="home-img-perfil h-48 rounded-full sm:h-56"
           alt="author"
         />
       </div>
       <div class="pt-8 sm:pt-10 lg:pl-8 lg:pt-0">
         <h1
-          class="text-center font-header px-1 text-4xl text-white sm:text-left sm:text-5xl md:text-6xl"
+          class="home-nombre text-center px-1 sm:text-left sm:text-5xl"
         >
         Hola soy Matias Sabbadini
         </h1>
@@ -52,7 +52,7 @@
           <div
             class="flex items-center justify-center pl-0 sm:justify-start md:pl-1"
           >
-            <p class="font-body text-lg uppercase text-white">Front-End Developer</p>
+            <p class="home-descripcion text-lg uppercase ">Front-End Developer</p>
         </div>
       </div>
     </div>
